Apply fixes to tests and disable tests that aren't easily fixable